--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -113,10 +113,10 @@
             </objects>
             <point key="canvasLocation" x="2113" y="-396"/>
         </scene>
-        <!--View Controller-->
+        <!--Outfit Wall View Controller-->
         <scene sceneID="Ay5-VC-xaB">
             <objects>
-                <viewController id="L0b-Dl-UHL" sceneMemberID="viewController">
+                <viewController id="L0b-Dl-UHL" customClass="OutfitWallViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HjN-78-DVX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -125,21 +125,77 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="172" id="Pob-Ej-D8x">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="172"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="216" id="Pob-Ej-D8x" customClass="OutfitWallTableViewCell" customModule="Ropa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="216"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pob-Ej-D8x" id="i6x-gr-2oR">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="171.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pob-Ej-D8x" id="i6x-gr-2oR">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="215.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tn1-w1-dCC">
-                                                    <rect key="frame" x="22" y="0.0" width="162" height="172"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tn1-w1-dCC">
+                                                    <rect key="frame" x="22" y="16" width="162" height="172"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="162" id="ICi-AL-ygp"/>
+                                                        <constraint firstAttribute="width" constant="162" id="Xwv-xH-yfO"/>
+                                                        <constraint firstAttribute="height" constant="172" id="a2s-8S-bbY"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="暱稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wae-XX-I2x">
+                                                    <rect key="frame" x="210" y="29" width="108" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="時間" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTR-Jk-5l5">
+                                                    <rect key="frame" x="213" y="153" width="108" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="風格" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqN-eA-QUI">
+                                                    <rect key="frame" x="213" y="71" width="105" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="按讚數" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay8-OD-4q7">
+                                                    <rect key="frame" x="212" y="112" width="105" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zqN-eA-QUI" firstAttribute="top" secondItem="Wae-XX-I2x" secondAttribute="bottom" constant="21" id="Dw8-RZ-ybt"/>
+                                                <constraint firstItem="Tn1-w1-dCC" firstAttribute="top" secondItem="i6x-gr-2oR" secondAttribute="topMargin" constant="5" id="EqI-J6-yF8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Wae-XX-I2x" secondAttribute="trailing" constant="42" id="FJG-Ca-gYw"/>
+                                                <constraint firstItem="dTR-Jk-5l5" firstAttribute="leading" secondItem="Tn1-w1-dCC" secondAttribute="trailing" constant="29" id="JaM-jF-tyc"/>
+                                                <constraint firstItem="Tn1-w1-dCC" firstAttribute="leading" secondItem="i6x-gr-2oR" secondAttribute="leadingMargin" constant="7" id="LvD-Zh-Klm"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Tn1-w1-dCC" secondAttribute="bottom" constant="12" id="M4s-BY-vW0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ay8-OD-4q7" secondAttribute="trailing" constant="43" id="PlW-rK-bT4"/>
+                                                <constraint firstItem="Ay8-OD-4q7" firstAttribute="top" secondItem="zqN-eA-QUI" secondAttribute="bottom" constant="20" id="S03-U1-QJ3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dTR-Jk-5l5" secondAttribute="trailing" constant="39" id="Wzc-6N-MEE"/>
+                                                <constraint firstItem="dTR-Jk-5l5" firstAttribute="top" secondItem="Ay8-OD-4q7" secondAttribute="bottom" constant="20" id="ZVn-aG-Nwo"/>
+                                                <constraint firstItem="Wae-XX-I2x" firstAttribute="leading" secondItem="Tn1-w1-dCC" secondAttribute="trailing" constant="26" id="g0o-2i-pql"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="zqN-eA-QUI" secondAttribute="trailing" constant="42" id="g3m-EH-IsZ"/>
+                                                <constraint firstItem="Wae-XX-I2x" firstAttribute="top" secondItem="i6x-gr-2oR" secondAttribute="topMargin" constant="18" id="rxg-kG-6mu"/>
+                                                <constraint firstItem="zqN-eA-QUI" firstAttribute="leading" secondItem="Tn1-w1-dCC" secondAttribute="trailing" constant="29" id="sDg-HI-VW9"/>
+                                                <constraint firstItem="Ay8-OD-4q7" firstAttribute="leading" secondItem="Tn1-w1-dCC" secondAttribute="trailing" constant="28" id="t68-cs-Gqa"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="dTR-Jk-5l5" id="Wqa-2H-ZNN"/>
+                                            <outlet property="likeAmount" destination="Ay8-OD-4q7" id="BYg-FE-iK5"/>
+                                            <outlet property="outfitImageView" destination="Tn1-w1-dCC" id="iVp-T2-2M0"/>
+                                            <outlet property="styleLabel" destination="zqN-eA-QUI" id="FZJ-GX-6s4"/>
+                                            <outlet property="userNameLabel" destination="Wae-XX-I2x" id="MOA-mZ-f2t"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="L0b-Dl-UHL" id="EIy-tf-eM9"/>
+                                    <outlet property="delegate" destination="L0b-Dl-UHL" id="47C-6F-Riw"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -151,7 +207,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5KM-37-9hN"/>
                     </view>
-                    <navigationItem key="navigationItem" id="AF2-1Z-Hk6"/>
+                    <navigationItem key="navigationItem" id="AF2-1Z-Hk6">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kUZ-du-Bbw"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="outfitWallTableView" destination="mLs-X7-T0w" id="2Dd-XB-gBf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2fd-tY-foN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -242,7 +303,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RGS-96-yHQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="2460"/>
+            <point key="canvasLocation" x="769" y="2407"/>
         </scene>
         <!--Outfit Details View Controller-->
         <scene sceneID="SLt-sl-TEx">
@@ -361,11 +422,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="188" id="Dxa-nk-E7C" customClass="OutfitListCell" customModule="Ropa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="188"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="189" id="Dxa-nk-E7C" customClass="OutfitListCell" customModule="Ropa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="189"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dxa-nk-E7C" id="r4l-8J-okj">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="188.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6P0-Pb-Ew2">
@@ -476,7 +537,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T2q-aT-clZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="1685"/>
+            <point key="canvasLocation" x="768.79999999999995" y="1684.4077961019491"/>
         </scene>
         <!--Clothes Details View Controller-->
         <scene sceneID="qrv-ZS-P1W">
@@ -687,7 +748,6 @@
         <!--Login View Controller-->
         <scene sceneID="T7V-Uf-wJr">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FDm-QN-UV0" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wAq-nV-QOa" customClass="LoginViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OIK-vz-CIm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -733,6 +793,7 @@
                         <segue destination="7zS-k9-gsp" kind="presentation" identifier="backToFirstView" id="cvO-6X-Afz"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDm-QN-UV0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1892" y="109.29535232383809"/>
         </scene>
